--- a/exercicios_25_11_24.ipynb
+++ b/exercicios_25_11_24.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM09qkbHBuv/Be8aj9GUiy1",
+      "authorship_tag": "ABX9TyNnTu68Oc0JGgYwb4WGHBzo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
         "id": "JLLONxR_hm0i",
         "outputId": "d8c0d122-a364-4bbc-d1b0-b94d050a4f8a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,6 +128,80 @@
             "Candidato 4: 3 votos, 15.0%\n",
             "Nulos: 3 votos, 15.0%\n",
             "Brancos: 2 votos, 10.0%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O setor de RH da sua empresa te pediu uma ajuda para analisar as idades de colaboradores(as) de 4 setores da empresa. Para isso, foram fornecidos os seguintes dados:\n",
+        "{'Setor A': [22, 26, 30, 30, 35, 38, 40, 56, 57, 65],\n",
+        " 'Setor B': [22, 24, 26, 33, 41, 49, 50, 54, 60, 64],\n",
+        " 'Setor C': [23, 26, 26, 29, 34, 35, 36, 41, 52, 56],\n",
+        " 'Setor D': [19, 20, 25, 27, 34, 39, 42, 44, 50, 65]}\n",
+        "\n",
+        " Sabendo que cada setor tem 10 colaboradores(as), construa um código que calcule a média de idade de cada setor, a idade média geral entre todos os setores e quantas pessoas estão acima da idade média geral."
+      ],
+      "metadata": {
+        "id": "Nk5DEbzZlT1c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "setores = {'Setor A':  [22, 26, 30, 30, 35, 38, 40, 56, 57, 65], 'Setor B': [22, 24, 26, 33, 41, 49, 50, 54, 60, 64], 'Setor C': [23, 26, 26, 29, 34, 35, 36, 41, 52, 56], 'Setor D': [19, 20, 25, 27, 34, 39, 42, 44, 50, 65]}\n",
+        "sum_um = sum_dois = sum_tres = sum_quatro = acima_da_media = 0\n",
+        "\n",
+        "for i in range(10):\n",
+        "  sum_um += setores['Setor A'][i]\n",
+        "  sum_dois += setores['Setor B'][i]\n",
+        "  sum_tres += setores['Setor C'][i]\n",
+        "  sum_quatro += setores['Setor D'][i]\n",
+        "\n",
+        "  media_a = sum_um / 10\n",
+        "  media_b = sum_dois / 10\n",
+        "  media_c = sum_tres / 10\n",
+        "  media_d = sum_quatro / 10\n",
+        "  media_geral = (sum_um + sum_dois + sum_tres + sum_quatro) / 40\n",
+        "print(f'A média de idades do setor A é: {media_a}\\n'\n",
+        "        f'A média de idades do setor B é: {media_b}\\n'\n",
+        "        f'A média de idades do setor C é: {media_c}\\n'\n",
+        "        f'A média de idades do setor D é: {media_d}\\n'\n",
+        "        f'A média geral entre todos os setores é: {media_geral:.2f}')\n",
+        "\n",
+        "for i in range(10):\n",
+        "  if setores['Setor A'][i] > media_geral:\n",
+        "    acima_da_media += 1\n",
+        "  if setores['Setor B'][i] > media_geral:\n",
+        "    acima_da_media += 1\n",
+        "  if setores['Setor C'][i] > media_geral:\n",
+        "    acima_da_media += 1\n",
+        "  if setores['Setor D'][i] > media_geral:\n",
+        "    acima_da_media += 1\n",
+        "\n",
+        "print(f'Há {acima_da_media} funcionários acima da média de idade.')\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a_kf0tS9lxZd",
+        "outputId": "3908c709-1c9d-41a6-e168-2db54fb416dd"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A média de idades do setor A é: 39.9\n",
+            "A média de idades do setor B é: 42.3\n",
+            "A média de idades do setor C é: 35.8\n",
+            "A média de idades do setor D é: 36.5\n",
+            "A média geral entre todos os setores é: 38.62\n",
+            "Há 18 funcionários acima da média de idade.\n"
           ]
         }
       ]
