--- a/exercicios_25_11_24.ipynb
+++ b/exercicios_25_11_24.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnTu68Oc0JGgYwb4WGHBzo",
+      "authorship_tag": "ABX9TyMXwr6Z5pyJZ3gZUwIdnldg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,6 +179,8 @@
         "    acima_da_media += 1\n",
         "  if setores['Setor D'][i] > media_geral:\n",
         "    acima_da_media += 1\n",
+        "#Neste caso não usei a função 'elif' para evitar um problema: mais de uma condição pode ser atendida ao mesmo tempo neste caso, e caso eu usasse elif,\n",
+        "# e o if fosse aceito como condição, todo o resto seria ignorado pelo programa.\n",
         "\n",
         "print(f'Há {acima_da_media} funcionários acima da média de idade.')\n",
         "\n"
@@ -188,9 +190,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_kf0tS9lxZd",
-        "outputId": "3908c709-1c9d-41a6-e168-2db54fb416dd"
+        "outputId": "feef9c69-77a9-43fc-8b3b-da7a4be7b812"
       },
-      "execution_count": 38,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
