--- a/exercicios_25_11_24.ipynb
+++ b/exercicios_25_11_24.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXwr6Z5pyJZ3gZUwIdnldg",
+      "authorship_tag": "ABX9TyOpSa8F+WYNHFAJ7Tb2bXf7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,6 +135,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "##***"
+      ],
+      "metadata": {
+        "id": "kOJv554Hr40y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "O setor de RH da sua empresa te pediu uma ajuda para analisar as idades de colaboradores(as) de 4 setores da empresa. Para isso, foram fornecidos os seguintes dados:\n",
         "{'Setor A': [22, 26, 30, 30, 35, 38, 40, 56, 57, 65],\n",
         " 'Setor B': [22, 24, 26, 33, 41, 49, 50, 54, 60, 64],\n",
@@ -150,7 +159,10 @@
     {
       "cell_type": "code",
       "source": [
-        "setores = {'Setor A':  [22, 26, 30, 30, 35, 38, 40, 56, 57, 65], 'Setor B': [22, 24, 26, 33, 41, 49, 50, 54, 60, 64], 'Setor C': [23, 26, 26, 29, 34, 35, 36, 41, 52, 56], 'Setor D': [19, 20, 25, 27, 34, 39, 42, 44, 50, 65]}\n",
+        "setores = {'Setor A':  [22, 26, 30, 30, 35, 38, 40, 56, 57, 65],\n",
+        "           'Setor B': [22, 24, 26, 33, 41, 49, 50, 54, 60, 64],\n",
+        "           'Setor C': [23, 26, 26, 29, 34, 35, 36, 41, 52, 56],\n",
+        "           'Setor D': [19, 20, 25, 27, 34, 39, 42, 44, 50, 65]}\n",
         "sum_um = sum_dois = sum_tres = sum_quatro = acima_da_media = 0\n",
         "\n",
         "for i in range(10):\n",
@@ -179,8 +191,9 @@
         "    acima_da_media += 1\n",
         "  if setores['Setor D'][i] > media_geral:\n",
         "    acima_da_media += 1\n",
-        "#Neste caso não usei a função 'elif' para evitar um problema: mais de uma condição pode ser atendida ao mesmo tempo neste caso, e caso eu usasse elif,\n",
-        "# e o if fosse aceito como condição, todo o resto seria ignorado pelo programa.\n",
+        "#Neste caso não usei a função 'elif' para evitar um problema: mais de uma\n",
+        "#condição pode ser atendida ao mesmo tempo neste caso, e caso eu usasse elif,\n",
+        "#e o if fosse aceito como condição, todo o resto seria ignorado pelo programa.\n",
         "\n",
         "print(f'Há {acima_da_media} funcionários acima da média de idade.')\n",
         "\n"
@@ -190,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_kf0tS9lxZd",
-        "outputId": "feef9c69-77a9-43fc-8b3b-da7a4be7b812"
+        "outputId": "dc3e3910-40a4-4543-e1a3-e0cb6fc9bfd9"
       },
-      "execution_count": 40,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
