--- a/Exercícios_26_11_24.ipynb
+++ b/Exercícios_26_11_24.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaJnFYZK6DQa7Mi8WBdCq+",
+      "authorship_tag": "ABX9TyMhKOGkfNhzHLJcjXJGTJo7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,9 +40,10 @@
         "\n",
         "lista = [16, 14, 63, 65, 17, 99, 70, 11, 20, 48, 79, 32, 17, 89, 12, 25, 66]\n",
         "\n",
-        "A leitura do tamanho da lista\n",
-        "A leitura do maior e menor valor\n",
-        "A soma dos valores da lista\n",
+        "* A leitura do tamanho da lista\n",
+        "* A leitura do maior e menor valor\n",
+        "* A soma dos valores da lista\n",
+        "\n",
         "Ao final exiba uma mensagem dizendo:\n",
         "\n",
         "\"A lista possui [tam] números em que o maior número é [maior] e o menor número é [menor]. A soma dos valores presentes nela é igual a [soma]\""
