--- a/Exercícios_NumPy.ipynb
+++ b/Exercícios_NumPy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNw75ALgFxR1hHX6KuC7NA3",
+      "authorship_tag": "ABX9TyO4wms3peDyBHVGqMbL9zES",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Importando base de dados de um link de dados sobre frutas no GitHub."
+      ],
+      "metadata": {
+        "id": "DQ12TRQ1RDqf"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -38,6 +47,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Importando biblioteca NumPy."
+      ],
+      "metadata": {
+        "id": "vmEffoVWRIgJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np"
@@ -47,6 +65,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Utilizando a função np.loadtxt para transformar os dados da url em array, neste trecho estou delimitando a separação dos dados por vírgula, pulando a primeira linha (de títulos) e a primeira coluna (que seriam os nomes das frutas)."
+      ],
+      "metadata": {
+        "id": "pZKy8kFgRMP2"
+      }
     },
     {
       "cell_type": "code",
@@ -76,6 +103,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Separando em variáveis informaçóes de diâmetro e peso das laranjas e toranjas."
+      ],
+      "metadata": {
+        "id": "zQ9YABHwRiXG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "diametro_laranja = dados[0:4999,0]\n",
@@ -100,6 +136,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Importando a biblioteca matplotlib.pyplot."
+      ],
+      "metadata": {
+        "id": "KqzWqWbNRpLN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt"
@@ -109,6 +154,15 @@
       },
       "execution_count": 40,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Plotando o gráfico de linhas, relacionando a massa das frutas com os diâmetros. Uma coisa engraçada desses dados, é que considerando as frutas como esféricas, a massa delas seria dada pela densidade*volume. E, sem fazer cálculo algum (posso deixar isso para análises futuras, por diversão), me parece que a massa varia muito pouco com a variação do diâmetro para os dois casos. A densidade está diminuindo?"
+      ],
+      "metadata": {
+        "id": "30OFri-eSA7_"
+      }
     },
     {
       "cell_type": "code",
